--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
 
-
 * {
     padding: 0;
     margin: 0;
@@ -25,11 +24,11 @@ header {
 }
 
 header .brand {
-    font-size: 1.5em;
+    font-size: 1.7em;
     font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
-    background: -webkit-linear-gradient(#eee, #012855);
+    background: -webkit-linear-gradient(180deg,yellow, blue);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -40,7 +39,7 @@ header .navigation {
 
 header .navigation .navigation-items a {
     position: relative;
-    color: #000;
+    color: #fff;
     font-size: 1em;
     font-weight: 500;
     text-decoration: none;
@@ -61,5 +60,85 @@ header .navigation .navigation-items a::before {
 
 header .navigation .navigation-items a:hover::before {
     width: 100%;
-    background: linear-gradient(#012855, #eee);
+    background: linear-gradient(to right, #eee, #012855);
 }
+
+section {
+    padding: 100px 200px;
+}
+
+.home {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background: #2696e9;
+}
+
+.home .content {
+    z-index: 80;
+    color: #fff;
+    width: 70%;
+    margin-top: 50px;
+}
+
+.home .content h1 {
+    font-size: 4em;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    line-height: 75px;
+    margin-bottom: 40px;  
+}
+
+.home .content h1 span {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.home .content p {
+    margin-bottom: 65px;
+}
+
+.home .content a {
+    background: #fff;
+    padding: 15px 35px;
+    color: #1680ac;
+    font-size: 1.1em;
+    font-weight: 500;
+    text-decoration: none;
+    border-radius: 2px;
+}
+
+.home .media-icons {
+    z-index: 80;
+    position: absolute;
+    right: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    transition: all 0.4s ease-in-out;
+}
+
+.home .media-icons a {
+    color: #fff;
+    font-size: 1.7em;
+    transition: all 0.4s ease-in-out;
+}
+
+.home .media-icons a:hover {
+    background: -webkit-linear-gradient(90deg, lightblue, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transform: scale(1.3);
+}
+
+
+
+
+
+
+
+
