--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,11 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+section {
+    padding: 100px 200px;
+}
+
+/* header */
 header {
     z-index: 100;
     position: absolute;
@@ -35,6 +40,7 @@ header .brand {
 
 header .navigation {
     position: relative;
+    transition: all 0.5s ease-in-out;
 }
 
 header .navigation .navigation-items a {
@@ -63,10 +69,13 @@ header .navigation .navigation-items a:hover::before {
     background: linear-gradient(to right, #eee, #012855);
 }
 
-section {
-    padding: 100px 200px;
+header .menu-btn {
+    display: none;
 }
+/* header end */
 
+
+/* home */
 .home {
     position: relative;
     width: 100%;
@@ -100,6 +109,7 @@ section {
 
 .home .content p {
     margin-bottom: 65px;
+    text-align: justify;
 }
 
 .home .content a {
@@ -134,6 +144,86 @@ section {
     -webkit-text-fill-color: transparent;
     transform: scale(1.3);
 }
+/* home end */
+
+
+
+/* responsive */
+@media (max-width: 1040px) {
+    header {
+        padding: 12px 20px;
+        max-height: 80px;
+    }
+    section {
+        padding: 100px 20px;
+    }
+    .home .media-icons {
+        right: 20px;
+    }
+    header .navigation {
+        opacity: 0;
+        transform: scale(0);
+        transition: all 0.5s ease-in-out;
+    }
+    header .navigation.active {
+        position: fixed;
+        opacity: 1;
+        transform: scale(1);
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(1, 1, 1, 0.5);
+        transition: all 0.5s ease-in-out;
+    }
+
+    header .navigation .navigation-items a {
+        font-size: 1.2em;
+        margin: 20px;
+        color: #222;
+    }
+    header .navigation .navigation-items a::before {
+        height: 5px;
+    }
+    header .navigation.active .navigation-items {
+        background: #fff;
+        width: 600px;
+        max-width: 600px;
+        margin: 20px;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 5px;
+        box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+        transition: all 0.5s ease-in-out;
+    }
+
+    header .menu-btn {
+        display: block;
+        background: url(../images/menu.png) no-repeat;
+        background-position: center;
+        background-size: contain;
+        width: 40px;
+        min-width: 40px;
+        height: 40px;
+        cursor: pointer;
+        transition: all 0.4s ease-in-out;
+    }
+    header .menu-btn.active {
+        z-index: 1000;
+        background: url(../images/close.png) no-repeat;
+        background-position: center;
+        background-size: contain;
+        width: 30px;
+        height: 30px;
+    }
+}
+/* responsive end */
+
 
 
 
