--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,12 @@ header .navigation .navigation-items a:hover::before {
 
 header .menu-btn {
     display: none;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 4px;
 }
+
+
 /* header end */
 
 
@@ -86,11 +91,27 @@ header .menu-btn {
     background: #2696e9;
 }
 
+.home::before {
+    z-index: 77;
+    content: '';
+    position: absolute;
+    background: rgba(3, 96, 251, 0.3);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 .home .content {
     z-index: 80;
     color: #fff;
     width: 70%;
     margin-top: 50px;
+    display: none;
+}
+
+.home .content.active {
+    display: block;
 }
 
 .home .content h1 {
@@ -143,6 +164,59 @@ header .menu-btn {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transform: scale(1.3);
+}
+
+.home video {
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slider-navigation {
+    z-index: 88;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(80px);
+    margin-bottom: 12px;
+}
+.slider-navigation .nav-btn {
+    width: 14px;
+    height: 14px;
+    border: 2px solid #fff;
+    background: transparent;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    transition: all 0.4s ease-in-out;
+}
+.slider-navigation .nav-btn.active {
+    background-color: #fff;
+}
+.slider-navigation .nav-btn:not(:last-child) {
+    margin-right: 20px;
+}
+
+.slider-navigation .nav-btn:hover {
+    transform: scale(1.2);
+    border: 2px solid transparent;
+    background: #fff;
+}
+
+.video-slide {
+    position: absolute;
+    width: 100%;
+    clip-path: circle(0% at 0 50%);
+}
+.video-slide.active {
+    clip-path: circle(150% at 0 50%);
+    transition: 2s ease;
+    transition-property: clip-path;
 }
 /* home end */
 
@@ -218,8 +292,24 @@ header .menu-btn {
         background: url(../images/close.png) no-repeat;
         background-position: center;
         background-size: contain;
-        width: 30px;
-        height: 30px;
+        border-color: transparent;
+    }
+}
+
+@media (max-width: 578px) {
+    .home .content h1 {
+        font-size: 3em;
+    }
+}
+
+@media (max-width: 420px) {
+    .home .content h1 {
+        font-size: 2.5em;
+        line-height: 50px;
+    }
+    .home .content p {
+        max-height: 100px;
+        overflow: hidden;
     }
 }
 /* responsive end */
